rev0/rev0.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2016.2
Copyright (C) 1986-2016 Xilinx, Inc. All Rights Reserved.

==============================================================

@I [SYN-201] Setting up clock 'default' with a period of 6.66667ns.
@I [SYN-201] Setting up clock 'default' with an uncertainty of 0.63ns.
@I [HLS-10] Setting target device to 'xc7z045ffg900-2'
@I [HLS-10] Analyzing design file 'assign_intensity/src/assign_intensity.cpp' ... 
@E [HLS-70] Compilation errors found:
assign_intensity/src/assign_intensity.cpp:117:6: error: variable has incomplete type 'void'
void print_buffer_fp(uint buf[BASE_SIZE][BASE_SIZE])
     ^
assign_intensity/src/assign_intensity.cpp:117:22: error: use of undeclared identifier 'uint'
void print_buffer_fp(uint buf[BASE_SIZE][BASE_SIZE])
                     ^
assign_intensity/src/assign_intensity.cpp:117:53: error: expected ';' after top level declarator
void print_buffer_fp(uint buf[BASE_SIZE][BASE_SIZE])
                                                    ^
                                                    ;
3 errors generated.
Failed checking during preprocessing.
    while executing
"source C:/Users/sakin/Desktop/pj_r_0001/assign_intensity/rev0/csynth.tcl"
    invoked from within
"hls::main C:/Users/sakin/Desktop/pj_r_0001/assign_intensity/rev0/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
